--- a/templates/index.html
+++ b/templates/index.html
@@ -12,18 +12,18 @@
 </head>
 <body>
 
-<div class="ml-10 mt-10">
+<div class="ml-20 mt-10">
 
-    <div style="width:50%; float: left;">
+    <div style="width:45%; float: left;">
         <h4 style="color: #3067bf;">Derivatives Sheet</h4>
         <div class="" id="DerivativesSheetTable"></div>
         <div class="mt-10" id="UpdateTime"></div>
     </div>
 
-    <div id="PriceArea" style="width:45%; float: left;">
+    <div id="PriceArea" style="width:50%; float: left;">
         <div id="CandleArea" class="" style="width:100%;">
             <h4  style="color: #3067bf;">Binance BTC/USDT Price</h4>
-            <div style="position:relative;width:100%; height:150px;">
+            <div style="position:relative;width:100%; height:200px;">
                 <canvas id="PriceChart"></canvas>
             </div>
         </div>
@@ -34,20 +34,20 @@
             </div>
         </div>
         <div id="IndexPriceKairiArea" class="" style="width:100%;">
-            <h4 style="color: #3067bf;" style="float: left;">Index Price Kairi</h4>
+            <h4 style="color: #3067bf;" style="float: left;">Index Basis</h4>
             <div class="" style="position:relative;width:100%; height:200px;">
                 <canvas id="IndexPriceKairiChart"></canvas>
             </div>
         </div>
-        <div id="MarkPriceKairiArea" class="" style="width:100%;">
-            <h4 style="color: #3067bf;">Mark Price Kairi</h4>
-            <div class="" style="position:relative;width:100%; height:200px;">
-                <canvas id="MarkPriceKairiChart"></canvas>
-            </div>
-        </div>
+<!--        <div id="MarkPriceKairiArea" class="" style="width:100%;">-->
+<!--            <h4 style="color: #3067bf;">Mark Price Kairi</h4>-->
+<!--            <div class="" style="position:relative;width:100%; height:200px;">-->
+<!--                <canvas id="MarkPriceKairiChart"></canvas>-->
+<!--            </div>-->
+<!--        </div>-->
         <div id="LongShortRatioArea" class="" style="width:100%;">
-            <h4 class="" style="color: #3067bf;">Binance Long Short Ratio</h4>
-            <div class="" style="position:relative;width:100%; height:130px;">
+            <h4 class="" style="color: #3067bf;">Long Short Ratio</h4>
+            <div class="" style="position:relative;width:100%; height:200px;">
                 <canvas id="LongShortRatioChart"></canvas>
             </div>
         </div>
